update navbar links

--- a/index.html
+++ b/index.html
@@ -81,35 +81,35 @@
                 </div>
                 <div class="dropdown-buffer-vertical"></div>
                 <div class="navbar-drop-sidebar">
-                  <a href="./index.html">Kecamatan Wonotunggal</a>
+                  <p>Kecamatan Wonotunggal</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="./index.html">Kecamatan Bandar</a>
+                  <p>Kecamatan Bandar</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="./index.html">Kecamatan Blado</a>
+                  <p>Kecamatan Blado</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="./index.html">Kecamatan Reban</a>
+                  <p>Kecamatan Reban</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="./index.html">Kecamatan Bawang</a>
+                  <p>Kecamatan Bawang</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="./index.html">Kecamatan Tersono</a>
+                  <p>Kecamatan Tersono</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="./index.html">Kecamatan Gringsing</a>
+                  <p>Kecamatan Gringsing</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="./index.html">Kecamatan Limpung</a>
+                  <p>Kecamatan Limpung</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="./index.html">Kecamatan Subah</a>
+                  <p>Kecamatan Subah</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="./index.html">Kecamatan Tulis</a>
+                  <p>Kecamatan Tulis</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="./index.html">Kecamatan Batang</a>
+                  <p>Kecamatan Batang</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="./index.html">Kecamatan Warungasem</a>
+                  <p>Kecamatan Warungasem</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="./index.html">Kecamatan Kandeman</a>
+                  <p>Kecamatan Kandeman</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="./index.html">Kecamatan Pecalungan</a>
+                  <p>Kecamatan Pecalungan</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="./index.html">Kecamatan Banyuputih</a>
+                  <p>Kecamatan Banyuputih</p>
                 </div>
               </div>
 
@@ -126,15 +126,15 @@
                 </div>
                 <div class="dropdown-buffer-vertical"></div>
                 <div class="navbar-drop-sidebar">
-                  <a href="./index.html">Tombo Coffee</a>
+                  <p>Tombo Coffee</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="./index.html">Batang Dolphin Center</a>
+                  <p>Batang Dolphin Center</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="./index.html">Pantai Ujung Negoro</a>
+                  <p>Pantai Ujung Negoro</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="./index.html">Kerajinan Kulit Masin</a>
+                  <p>Kerajinan Kulit Masin</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="./index.html">Bukit Cinta Ngadirejo</a>
+                  <p>Bukit Cinta Ngadirejo</p>
                 </div>
               </div>
             </div>
@@ -197,7 +197,7 @@
               <div class="horizontal-line thin"></div>
               <a href="./pages/visimisi.html">Visi dan Misi Pemerintahan</a>
               <div class="horizontal-line thin"></div>
-              <a href="./pages/prestasi.html">Prestasi Kerja</a>
+              <p>Prestasi Kerja</p>
             </div>
           </div>
 
@@ -208,38 +208,30 @@
             </div>
             <div class="dropdown-buffer"></div>
             <div class="dropdown-menu">
-              <a href="./index.html"
-                >Harga Kebutuhan Pokok Masyarakat Kabupaten Batang</a
-              >
+              <p>Harga Kebutuhan Pokok Masyarakat Kabupaten Batang</p>
               <div class="horizontal-line thin"></div>
-              <a href="./index.html">LKJIP Kabupaten Batang</a>
+              <p>LKJIP Kabupaten Batang</p>
               <div class="horizontal-line thin"></div>
-              <a href="./index.html">Dokumentasi Publikasi Ijin Lingkungan</a>
+              <p>Dokumentasi Publikasi Ijin Lingkungan</p>
               <div class="horizontal-line thin"></div>
-              <a href="./index.html"
-                >Transparansi Pengelolaan Anggaran Daerah</a
-              >
+              <p>Transparansi Pengelolaan Anggaran Daerah</p>
               <div class="horizontal-line thin"></div>
-              <a href="./index.html">Rencana Umum Pengadaan</a>
+              <p>Rencana Umum Pengadaan</p>
               <div class="horizontal-line thin"></div>
-              <a href="./index.html">Statistik Kabupaten Batang</a>
+              <p>Statistik Kabupaten Batang</p>
               <div class="horizontal-line thin"></div>
-              <a href="./index.html"
-                >Transparansi dan Akuntabilitas Pengadaan Barang dan Jasa
-              </a>
+              <p>Transparansi dan Akuntabilitas Pengadaan Barang dan Jasa </p>
               <div class="horizontal-line thin"></div>
-              <a href="./index.html"
+              <p
                 >Informasi Realisasi Rencana Aksi Pencegahan dan Pemberantasan
-                Korupsi</a
+                Korupsi</p
               >
               <div class="horizontal-line thin"></div>
-              <a href="./index.html"
-                >Laporan Akuntabilitas Kinerja Instansi Pemerintah</a
-              >
+              <p>Laporan Akuntabilitas Kinerja Instansi Pemerintah</p>
               <div class="horizontal-line thin"></div>
-              <a href="./index.html">e-LHKPN Pemerintah Kabupaten Batang</a>
+              <p>e-LHKPN Pemerintah Kabupaten Batang</p>
               <div class="horizontal-line thin"></div>
-              <a href="./index.html">SiRUP (Rencana Umum Pengadaan)</a>
+              <p>SiRUP (Rencana Umum Pengadaan)</p>
             </div>
           </div>
 
@@ -651,10 +643,10 @@
         </div>
         <div class="footer-top-container">
           <p class="footer-title">Tautan Utama</p>
-          <a href="./index.html" class="footer-link">Berita Seputar Batang</a>
-          <a href="./index.html" class="footer-link">Pemerintahan Kami</a>
-          <a href="./index.html" class="footer-link">Tentang Batang</a>
-          <a href="./index.html" class="footer-link">Layanan Kami</a>
+          <p class="footer-link">Berita Seputar Batang</p>
+          <p class="footer-link">Pemerintahan Kami</p>
+          <p class="footer-link">Tentang Batang</p>
+          <p class="footer-link">Layanan Kami</p>
         </div>
         <div class="footer-top-container">
           <p class="footer-title">Kontak Kami</p>
