--- a/pages/geografis.html
+++ b/pages/geografis.html
@@ -73,35 +73,35 @@
                 </div>
                 <div class="dropdown-buffer-vertical"></div>
                 <div class="navbar-drop-sidebar">
-                  <a href="../index.html">Kecamatan Wonotunggal</a>
+                  <p>Kecamatan Wonotunggal</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Kecamatan Bandar</a>
+                  <p>Kecamatan Bandar</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Kecamatan Blado</a>
+                  <p>Kecamatan Blado</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Kecamatan Reban</a>
+                  <p>Kecamatan Reban</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Kecamatan Bawang</a>
+                  <p>Kecamatan Bawang</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Kecamatan Tersono</a>
+                  <p>Kecamatan Tersono</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Kecamatan Gringsing</a>
+                  <p>Kecamatan Gringsing</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Kecamatan Limpung</a>
+                  <p>Kecamatan Limpung</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Kecamatan Subah</a>
+                  <p>Kecamatan Subah</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Kecamatan Tulis</a>
+                  <p>Kecamatan Tulis</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Kecamatan Batang</a>
+                  <p>Kecamatan Batang</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Kecamatan Warungasem</a>
+                  <p>Kecamatan Warungasem</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Kecamatan Kandeman</a>
+                  <p>Kecamatan Kandeman</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Kecamatan Pecalungan</a>
+                  <p>Kecamatan Pecalungan</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Kecamatan Banyuputih</a>
+                  <p>Kecamatan Banyuputih</p>
                 </div>
               </div>
 
@@ -118,15 +118,15 @@
                 </div>
                 <div class="dropdown-buffer-vertical"></div>
                 <div class="navbar-drop-sidebar">
-                  <a href="../index.html">Tombo Coffee</a>
+                  <p>Tombo Coffee</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Batang Dolphin Center</a>
+                  <p>Batang Dolphin Center</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Pantai Ujung Negoro</a>
+                  <p>Pantai Ujung Negoro</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Kerajinan Kulit Masin</a>
+                  <p>Kerajinan Kulit Masin</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Bukit Cinta Ngadirejo</a>
+                  <p>Bukit Cinta Ngadirejo</p>
                 </div>
               </div>
             </div>
@@ -187,7 +187,7 @@
               <div class="horizontal-line thin"></div>
               <a href="./visimisi.html">Visi dan Misi Pemerintahan</a>
               <div class="horizontal-line thin"></div>
-              <a href="./prestasi.html">Prestasi Kerja</a>
+              <p>Prestasi Kerja</p>
             </div>
           </div>
 
@@ -198,38 +198,30 @@
             </div>
             <div class="dropdown-buffer"></div>
             <div class="dropdown-menu">
-              <a href="../index.html"
-                >Harga Kebutuhan Pokok Masyarakat Kabupaten Batang</a
-              >
+              <p>Harga Kebutuhan Pokok Masyarakat Kabupaten Batang</p>
               <div class="horizontal-line thin"></div>
-              <a href="../index.html">LKJIP Kabupaten Batang</a>
+              <p>LKJIP Kabupaten Batang</p>
               <div class="horizontal-line thin"></div>
-              <a href="../index.html">Dokumentasi Publikasi Ijin Lingkungan</a>
+              <p>Dokumentasi Publikasi Ijin Lingkungan</p>
               <div class="horizontal-line thin"></div>
-              <a href="../index.html"
-                >Transparansi Pengelolaan Anggaran Daerah</a
-              >
+              <p>Transparansi Pengelolaan Anggaran Daerah</p>
               <div class="horizontal-line thin"></div>
-              <a href="../index.html">Rencana Umum Pengadaan</a>
+              <p>Rencana Umum Pengadaan</p>
               <div class="horizontal-line thin"></div>
-              <a href="../index.html">Statistik Kabupaten Batang</a>
+              <p>Statistik Kabupaten Batang</p>
               <div class="horizontal-line thin"></div>
-              <a href="../index.html"
-                >Transparansi dan Akuntabilitas Pengadaan Barang dan Jasa</a
-              >
+              <p>Transparansi dan Akuntabilitas Pengadaan Barang dan Jasa</p>
               <div class="horizontal-line thin"></div>
-              <a href="../index.html"
+              <p
                 >Informasi Realisasi Rencana Aksi Pencegahan dan Pemberantasan
-                Korupsi</a
+                Korupsi</p
               >
               <div class="horizontal-line thin"></div>
-              <a href="../index.html"
-                >Laporan Akuntabilitas Kinerja Instansi Pemerintah</a
-              >
+              <p>Laporan Akuntabilitas Kinerja Instansi Pemerintah</p>
               <div class="horizontal-line thin"></div>
-              <a href="../index.html">e-LHKPN Pemerintah Kabupaten Batang</a>
+              <p>e-LHKPN Pemerintah Kabupaten Batang</p>
               <div class="horizontal-line thin"></div>
-              <a href="../index.html">SiRUP (Rencana Umum Pengadaan)</a>
+              <p>SiRUP (Rencana Umum Pengadaan)</p>
             </div>
           </div>
 
@@ -291,95 +283,108 @@
               memberikan kemungkinan Kabupaten Batang berkembang cukup
               prospektif di sektor jasa transit dan transportasi.
             </div>
-
-            <div class="main-text-header">Kondisi Wilayah</div>
-            <div class="main-text-desc">
-              Kondisi wilayah Kabupaten Batang merupakan kombinasi antara daerah
-              pantai, dataran rendah dan pegunungan. Dengan kondisi ini
-              Kabupaten Batang mempunyai potensi yang sangat besar untuk
-              agroindustri, agrowisata dan agrobisnis.
-            </div>
-
-            <div class="main-text-header">Jarak dengan Daerah Lain</div>
-            <div class="main-text-desc">
-              Jarak Kabupaten Batang dengan daerah-daerah lain:
-              <ul class="distance-list">
-                <li>Pekalongan : 9 Km</li>
-                <li>Pemalang : 43 Km</li>
-                <li>Tegal : 72 Km</li>
-                <li>Cirebon : 144 Km</li>
-                <li>Jakarta : 392 Km</li>
-                <li>Kendal : 64 Km</li>
-                <li>Semarang : 93 Km</li>
-                <li>Surabaya : 480 Km</li>
-              </ul>
-            </div>
-
-            <div class="main-text-header">Topografi</div>
-            <div class="main-text-desc">
-              Keadaan topografi wilayah Kabupaten Batang terbagi atas tiga
-              bagian yaitu pantai, dataran rendah dan wilayah pegunungan. Ada
-              lima gunung dengan ketinggian rata-rata diatas 2000 m, yaitu:
-              <ul class="mountain-list">
-                <li>Gunung Prau : 2.565 mdpl</li>
-                <li>Gunung Sipandu : 2.241 mdpl</li>
-                <li>Gunung Gajah Mungkur : 2.101 mdpl</li>
-                <li>Gunung Alak : 2.239 mdpl</li>
-                <li>Gunung Butak : 2.222 mdpl</li>
-              </ul>
-            </div>
-
-            <div class="main-text-desc">
-              Kondisi wilayah yang merupakan kombinasi antara daerah pantai,
-              dataran rendah dan pegunungan di Kabupaten Batang merupakan
-              potensi yang amat besar untuk dikembangkan pembangunan daerah
-              bercirikan agroindustri, agrowisata dan agrobisnis. Wilayah
-              Kabupaten Batang sebelah selatan yang bercorak pegunungan misalnya
-              sangat potensial untuk dikembangkan menjadi wilayah pembangunan
-              dengan basis agroindustri dan agrowisata. Basis agroindustri ini
-              mengacu pada berbagai macam hasil tanaman perkebunan seperti :
-              teh, kopi, coklat dan sayuran. Selain itu juga memiliki potensi
-              wisata alam yang prospektif di masa datang.
-            </div>
-
-            <div class="main-text-header">Keadaan dan Pemanfaatan Tanah</div>
-            <div class="main-text-desc">
-              Wilayah yang sebagian besar adalah pegunungan dengan susunan tanah
-              sebagai berikut : latesol 69,66%; andosol 13,23%; aluvial 11,47%
-              dan podsolik 5,64%. Susunan tanah tersebut menentukan penyediaan
-              prasarana sebagian besar ditujukan untuk budidaya hutan,
-              perkebunan dan pertanian. Adapun penggunaan hutan dan perkebunan
-              mayoritas di tangan Negara. Sedangkan pertanian baik kering maupun
-              basah (irigasi sederhana dan irigasi teknis) dilakukan oleh warga
-              setempat.
-            </div>
-
-            <div class="main-text-desc">
-              Perubahan areal pemanfaatan tanah sangat stagnan, walaupun
-              Kabupaten Batang terletak di jalur ekonomi. Lebih kurang 60%
-              diusahakan sebagai hutan, perkebunan dan areal pertanian yang
-              memberikan hasil komoditi berupa kayu jati, kayu rimba, karet,
-              teh, coklat, kapuk randu dan hasil pertanian lainnya.
-            </div>
-
-            <div class="main-text-header">Pembagian Wilayah Administratif</div>
-            <div class="main-text-desc">
-              Berdasarkan Peraturan Daerah Kabupaten Batang Nomor 7 Tahun 2004
-              tentang Pembentukan Kecamatan Kabupaten Batang, jumlah kecamatan
-              di Kabupaten Batang yang semula 12 kecamatan berubah menjadi 15
-              kecamatan. Pemekaran wilayah ini dilakukan oleh Pemerintah
-              Kabupaten Batang sebagai upaya untuk menyelenggarakan urusan
-              pemerintahan dalam penyelenggaraan pemerintahan, pembangunan dan
-              pelayanan kepada masyarakat khususnya pada tingkat kecamatan,
-              desa, dan kelurahan. Sedangkan tujuannya adalah untuk:
-            </div>
-            <div class="main-text-desc">
-              1. Meningkatkan efektifitas penyelenggaraan pemerintahan di
-              tingkat kecamatan,<br />
-              2. Meningkatkan dan mendekatkan pelayanan kepada masyarakat,<br />
-              3. Meningkatkan dan mempercepat pemerataan pembangunan.
-            </div>
           </div>
+        </div>
+      </div>
+
+      <div class="main-text-container tac">
+        <div class="main-text-header">Kondisi Wilayah</div>
+        <div class="main-text-desc">
+          Kondisi wilayah Kabupaten Batang merupakan kombinasi antara daerah
+          pantai, dataran rendah dan pegunungan. Dengan kondisi ini Kabupaten
+          Batang mempunyai potensi yang sangat besar untuk agroindustri,
+          agrowisata dan agrobisnis.
+        </div>
+      </div>
+
+      <div class="main-text-container fd-r ai-fs">
+        <div class="main-text-container-inner">
+          <div class="main-text-header tac">Jarak dengan Daerah Lain</div>
+          <div class="main-text-desc df fd-c ai-c">
+            Jarak Kabupaten Batang dengan daerah-daerah lain:
+            <ul class="distance-list">
+              <li>Pekalongan : 9 Km</li>
+              <li>Pemalang : 43 Km</li>
+              <li>Tegal : 72 Km</li>
+              <li>Cirebon : 144 Km</li>
+              <li>Jakarta : 392 Km</li>
+              <li>Kendal : 64 Km</li>
+              <li>Semarang : 93 Km</li>
+              <li>Surabaya : 480 Km</li>
+            </ul>
+          </div>
+        </div>
+        <div class="main-text-container-inner">
+          <div class="main-text-header tac">Topografi</div>
+          <div class="main-text-desc df fd-c ai-c">
+            <p class="tac"
+              >Keadaan topografi wilayah Kabupaten Batang terbagi atas tiga
+              bagian yaitu pantai, dataran rendah dan wilayah pegunungan. Ada
+              lima gunung dengan ketinggian rata-rata diatas 2000 m, yaitu:</p
+            >
+            <ul class="mountain-list">
+              <li>Gunung Prau : 2.565 mdpl</li>
+              <li>Gunung Sipandu : 2.241 mdpl</li>
+              <li>Gunung Gajah Mungkur : 2.101 mdpl</li>
+              <li>Gunung Alak : 2.239 mdpl</li>
+              <li>Gunung Butak : 2.222 mdpl</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="main-text-container">
+        <div class="main-text-desc tac">
+          Kondisi wilayah yang merupakan kombinasi antara daerah pantai, dataran
+          rendah dan pegunungan di Kabupaten Batang merupakan potensi yang amat
+          besar untuk dikembangkan pembangunan daerah bercirikan agroindustri,
+          agrowisata dan agrobisnis. Wilayah Kabupaten Batang sebelah selatan
+          yang bercorak pegunungan misalnya sangat potensial untuk dikembangkan
+          menjadi wilayah pembangunan dengan basis agroindustri dan agrowisata.
+          Basis agroindustri ini mengacu pada berbagai macam hasil tanaman
+          perkebunan seperti : teh, kopi, coklat dan sayuran. Selain itu juga
+          memiliki potensi wisata alam yang prospektif di masa datang.
+        </div>
+      </div>
+
+      <div class="main-text-container">
+        <div class="main-text-header">Keadaan dan Pemanfaatan Tanah</div>
+        <div class="main-text-desc tac">
+          Wilayah yang sebagian besar adalah pegunungan dengan susunan tanah
+          sebagai berikut : latesol 69,66%; andosol 13,23%; aluvial 11,47% dan
+          podsolik 5,64%. Susunan tanah tersebut menentukan penyediaan prasarana
+          sebagian besar ditujukan untuk budidaya hutan, perkebunan dan
+          pertanian. Adapun penggunaan hutan dan perkebunan mayoritas di tangan
+          Negara. Sedangkan pertanian baik kering maupun basah (irigasi
+          sederhana dan irigasi teknis) dilakukan oleh warga setempat.
+        </div>
+
+        <div class="main-text-desc tac">
+          Perubahan areal pemanfaatan tanah sangat stagnan, walaupun Kabupaten
+          Batang terletak di jalur ekonomi. Lebih kurang 60% diusahakan sebagai
+          hutan, perkebunan dan areal pertanian yang memberikan hasil komoditi
+          berupa kayu jati, kayu rimba, karet, teh, coklat, kapuk randu dan
+          hasil pertanian lainnya.
+        </div>
+      </div>
+
+      <div class="main-text-container">
+        <div class="main-text-header">Pembagian Wilayah Administratif</div>
+        <div class="main-text-desc tac">
+          Berdasarkan Peraturan Daerah Kabupaten Batang Nomor 7 Tahun 2004
+          tentang Pembentukan Kecamatan Kabupaten Batang, jumlah kecamatan di
+          Kabupaten Batang yang semula 12 kecamatan berubah menjadi 15
+          kecamatan. Pemekaran wilayah ini dilakukan oleh Pemerintah Kabupaten
+          Batang sebagai upaya untuk menyelenggarakan urusan pemerintahan dalam
+          penyelenggaraan pemerintahan, pembangunan dan pelayanan kepada
+          masyarakat khususnya pada tingkat kecamatan, desa, dan kelurahan.
+          Sedangkan tujuannya adalah untuk:
+        </div>
+        <div class="main-text-desc tac">
+          1. Meningkatkan efektifitas penyelenggaraan pemerintahan di tingkat
+          kecamatan,<br />
+          2. Meningkatkan dan mendekatkan pelayanan kepada masyarakat,<br />
+          3. Meningkatkan dan mempercepat pemerataan pembangunan.
         </div>
       </div>
     </section>
@@ -391,10 +396,10 @@
         </div>
         <div class="footer-top-container">
           <p class="footer-title">Tautan Utama</p>
-          <a href="../index.html" class="footer-link">Berita Seputar Batang</a>
-          <a href="../index.html" class="footer-link">Pemerintahan Kami</a>
-          <a href="../index.html" class="footer-link">Tentang Batang</a>
-          <a href="../index.html" class="footer-link">Layanan Kami</a>
+          <p class="footer-link">Berita Seputar Batang</p>
+          <p class="footer-link">Pemerintahan Kami</p>
+          <p class="footer-link">Tentang Batang</p>
+          <p class="footer-link">Layanan Kami</p>
         </div>
         <div class="footer-top-container">
           <p class="footer-title">Kontak Kami</p>
