--- a/pages/lambang.html
+++ b/pages/lambang.html
@@ -73,35 +73,35 @@
                 </div>
                 <div class="dropdown-buffer-vertical"></div>
                 <div class="navbar-drop-sidebar">
-                  <a href="../index.html">Kecamatan Wonotunggal</a>
+                  <p>Kecamatan Wonotunggal</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Kecamatan Bandar</a>
+                  <p>Kecamatan Bandar</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Kecamatan Blado</a>
+                  <p>Kecamatan Blado</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Kecamatan Reban</a>
+                  <p>Kecamatan Reban</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Kecamatan Bawang</a>
+                  <p>Kecamatan Bawang</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Kecamatan Tersono</a>
+                  <p>Kecamatan Tersono</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Kecamatan Gringsing</a>
+                  <p>Kecamatan Gringsing</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Kecamatan Limpung</a>
+                  <p>Kecamatan Limpung</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Kecamatan Subah</a>
+                  <p>Kecamatan Subah</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Kecamatan Tulis</a>
+                  <p>Kecamatan Tulis</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Kecamatan Batang</a>
+                  <p>Kecamatan Batang</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Kecamatan Warungasem</a>
+                  <p>Kecamatan Warungasem</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Kecamatan Kandeman</a>
+                  <p>Kecamatan Kandeman</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Kecamatan Pecalungan</a>
+                  <p>Kecamatan Pecalungan</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Kecamatan Banyuputih</a>
+                  <p>Kecamatan Banyuputih</p>
                 </div>
               </div>
 
@@ -118,15 +118,15 @@
                 </div>
                 <div class="dropdown-buffer-vertical"></div>
                 <div class="navbar-drop-sidebar">
-                  <a href="../index.html">Tombo Coffee</a>
+                  <p>Tombo Coffee</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Batang Dolphin Center</a>
+                  <p>Batang Dolphin Center</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Pantai Ujung Negoro</a>
+                  <p>Pantai Ujung Negoro</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Kerajinan Kulit Masin</a>
+                  <p>Kerajinan Kulit Masin</p>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">Bukit Cinta Ngadirejo</a>
+                  <p>Bukit Cinta Ngadirejo</p>
                 </div>
               </div>
             </div>
@@ -187,7 +187,7 @@
               <div class="horizontal-line thin"></div>
               <a href="./visimisi.html">Visi dan Misi Pemerintahan</a>
               <div class="horizontal-line thin"></div>
-              <a href="./prestasi.html">Prestasi Kerja</a>
+              <p>Prestasi Kerja</p>
             </div>
           </div>
 
@@ -198,38 +198,30 @@
             </div>
             <div class="dropdown-buffer"></div>
             <div class="dropdown-menu">
-              <a href="../index.html"
-                >Harga Kebutuhan Pokok Masyarakat Kabupaten Batang</a
-              >
+              <p>Harga Kebutuhan Pokok Masyarakat Kabupaten Batang</p>
               <div class="horizontal-line thin"></div>
-              <a href="../index.html">LKJIP Kabupaten Batang</a>
+              <p>LKJIP Kabupaten Batang</p>
               <div class="horizontal-line thin"></div>
-              <a href="../index.html">Dokumentasi Publikasi Ijin Lingkungan</a>
+              <p>Dokumentasi Publikasi Ijin Lingkungan</p>
               <div class="horizontal-line thin"></div>
-              <a href="../index.html"
-                >Transparansi Pengelolaan Anggaran Daerah</a
-              >
+              <p>Transparansi Pengelolaan Anggaran Daerah</p>
               <div class="horizontal-line thin"></div>
-              <a href="../index.html">Rencana Umum Pengadaan</a>
+              <p>Rencana Umum Pengadaan</p>
               <div class="horizontal-line thin"></div>
-              <a href="../index.html">Statistik Kabupaten Batang</a>
+              <p>Statistik Kabupaten Batang</p>
               <div class="horizontal-line thin"></div>
-              <a href="../index.html"
-                >Transparansi dan Akuntabilitas Pengadaan Barang dan Jasa</a
-              >
+              <p>Transparansi dan Akuntabilitas Pengadaan Barang dan Jasa</p>
               <div class="horizontal-line thin"></div>
-              <a href="../index.html"
+              <p
                 >Informasi Realisasi Rencana Aksi Pencegahan dan Pemberantasan
-                Korupsi</a
+                Korupsi</p
               >
               <div class="horizontal-line thin"></div>
-              <a href="../index.html"
-                >Laporan Akuntabilitas Kinerja Instansi Pemerintah</a
-              >
+              <p>Laporan Akuntabilitas Kinerja Instansi Pemerintah</p>
               <div class="horizontal-line thin"></div>
-              <a href="../index.html">e-LHKPN Pemerintah Kabupaten Batang</a>
+              <p>e-LHKPN Pemerintah Kabupaten Batang</p>
               <div class="horizontal-line thin"></div>
-              <a href="../index.html">SiRUP (Rencana Umum Pengadaan)</a>
+              <p>SiRUP (Rencana Umum Pengadaan)</p>
             </div>
           </div>
 
@@ -264,7 +256,7 @@
     <section class="main">
       <div class="main-text-container">
         <div class="main-text-header">Lambang Daerah Kabupaten Batang</div>
-        
+
         <div class="main-text-withimg-container">
           <div class="main-text-img-container">
             <img src="../assets/images/lambang.png" alt="Lambang Batang" />
@@ -273,41 +265,146 @@
 
           <div class="main-text-container-inner">
             <div class="main-text-desc">
-              Lambang yang digunakan oleh Pemerintah Daerah Kabupaten Batang adalah lukisan yang berbentuk dasar perisai yang berukuran 4 : 5, yang melambangkan tekad rakyat Batang untuk mempertahankan daerahnya, baik dalam arti sempit maupun daerah dalam pengertian sebagai Wilayah Negara Kesatuan Republik Indonesia.
+              Lambang yang digunakan oleh Pemerintah Daerah Kabupaten Batang
+              adalah lukisan yang berbentuk dasar perisai yang berukuran 4 : 5,
+              yang melambangkan tekad rakyat Batang untuk mempertahankan
+              daerahnya, baik dalam arti sempit maupun daerah dalam pengertian
+              sebagai Wilayah Negara Kesatuan Republik Indonesia.
             </div>
 
-            <div class="main-text-header">Pengertian Tentang Bagian-Bagiannya</div>
+            <div class="main-text-header"
+              >Pengertian Tentang Bagian-Bagiannya</div
+            >
             <ol class="lambang-list">
-              <li><strong>BINTANG BERSUDUT LIMA</strong> berwarna emas, melambangkan Ketuhanan Yang Maha Esa.</li>
-              <li><strong>PADI DAN KAPAS</strong>, melambangkan harapan rakyat akan terpenuhinya kemakmuran (murah sandang, murah pangan).</li>
-              <li><strong>GUNUNG, PABRIK, BATIK DAN LAUT</strong>, mengandung rangkaian pengertian bahwa Batang mempunyai daerah pegunungan yang penuh dengan kekayaan alam, dataran rendah yang kaya perusahaan-perusahaan dan laut yang sepanjang masa menghasilkan hasil laut.</li>
-              <li><strong>PUSAKA : KERIS</strong>, suatu pusaka yang melambangkan tolok pimpinan.</li>
-              <li><strong>TOMBAK</strong>, pusaka yang biasa menjadi pegangan prajurit / rakyat.</li>
-              <li><strong>GABUNGAN ANTARA KERIS DAN TOMBAK</strong>, mengandung arti antara yang memimpin dan yang dipimpin.</li>
-              <li><strong>PABRIK</strong>, menjelaskan bahwa di Batang terdapat banyak perusahaan. Dari perusahaan makanan rakyat, perusahaan sandang sampai dengan perusahaan yang menghasilkan bahan-bahan ekspor, antara lain tapioka, karet, coklat, teh, kapuk, dan industri lainnya.</li>
-              <li><strong>BATIK SOGAN</strong>, menunjukkan bahwa seni batik ini merupakan seni kerajinan rakyat yang mendapat daging turun temurun sekaligus melambangkan bahwa rakyat Batang memelihara kebudayaan bangsa / daerah yang berkepribadian.</li>
-              <li><strong>IKAN</strong>, menjelaskan bahwa Batang mempunyai laut dan tambak-tambak yang sepanjang masa menghasilkan ikan. Bukan hanya untuk daerah setempat, tetapi bahkan dapat memenuhi pasar-pasar ikan di daerah lainnya.</li>
-              <li><strong>PITA</strong> berwarna kuning emas yang terletak di bawah, melambangkan benang emas yang mengikait semua ciri kepribadian serta budi dan daya rakyat seperti terdapat dalam lambang tersebut di atas.</li>
+              <li
+                ><strong>BINTANG BERSUDUT LIMA</strong> berwarna emas,
+                melambangkan Ketuhanan Yang Maha Esa.</li
+              >
+              <li
+                ><strong>PADI DAN KAPAS</strong>, melambangkan harapan rakyat
+                akan terpenuhinya kemakmuran (murah sandang, murah pangan).</li
+              >
+              <li
+                ><strong>GUNUNG, PABRIK, BATIK DAN LAUT</strong>, mengandung
+                rangkaian pengertian bahwa Batang mempunyai daerah pegunungan
+                yang penuh dengan kekayaan alam, dataran rendah yang kaya
+                perusahaan-perusahaan dan laut yang sepanjang masa menghasilkan
+                hasil laut.</li
+              >
+              <li
+                ><strong>PUSAKA : KERIS</strong>, suatu pusaka yang melambangkan
+                tolok pimpinan.</li
+              >
+              <li
+                ><strong>TOMBAK</strong>, pusaka yang biasa menjadi pegangan
+                prajurit / rakyat.</li
+              >
+              <li
+                ><strong>GABUNGAN ANTARA KERIS DAN TOMBAK</strong>, mengandung
+                arti antara yang memimpin dan yang dipimpin.</li
+              >
+              <li
+                ><strong>PABRIK</strong>, menjelaskan bahwa di Batang terdapat
+                banyak perusahaan. Dari perusahaan makanan rakyat, perusahaan
+                sandang sampai dengan perusahaan yang menghasilkan bahan-bahan
+                ekspor, antara lain tapioka, karet, coklat, teh, kapuk, dan
+                industri lainnya.</li
+              >
+              <li
+                ><strong>BATIK SOGAN</strong>, menunjukkan bahwa seni batik ini
+                merupakan seni kerajinan rakyat yang mendapat daging turun
+                temurun sekaligus melambangkan bahwa rakyat Batang memelihara
+                kebudayaan bangsa / daerah yang berkepribadian.</li
+              >
+              <li
+                ><strong>IKAN</strong>, menjelaskan bahwa Batang mempunyai laut
+                dan tambak-tambak yang sepanjang masa menghasilkan ikan. Bukan
+                hanya untuk daerah setempat, tetapi bahkan dapat memenuhi
+                pasar-pasar ikan di daerah lainnya.</li
+              >
+              <li
+                ><strong>PITA</strong> berwarna kuning emas yang terletak di
+                bawah, melambangkan benang emas yang mengikait semua ciri
+                kepribadian serta budi dan daya rakyat seperti terdapat dalam
+                lambang tersebut di atas.</li
+              >
             </ol>
 
-            <div class="main-text-header">Pengertian Tentang Jumlah Bagian-Bagiannya</div>
+            <div class="main-text-header"
+              >Pengertian Tentang Jumlah Bagian-Bagiannya</div
+            >
             <ol class="lambang-list">
-              <li><strong>Butir padi berjumlah 17 (tujuh belas)</strong> bersama bunga kapas berjumlah 8 (delapan) di dalam perisai berukuran 4 : 5 mengandung pengertian tentang kesetiaan rakyat akan semangat 17 Agustus 1945.</li>
-              <li><strong>Pita yang berbentuk angka 8 (delapan)</strong>, atap pabrik yang berpuncak 4 (empat) dan gelombang laut yang 6 (enam) di atas dan 6 (enam) di bawah menerangkan tentang hari kembalinya Batang menjadi Daerah Kabupaten lagi pada tanggal 8 April 1966 setelah 30 tahun bergabung dengan Pekalongan.</li>
-              <li><strong>Ikan yang berjumlah 2 (dua)</strong> ekor dan terletak berhadapan mengandung arti bahwa di Batang selalu ada dua kekuatan yang saling embat-embatan / musyawarah, nampaknya agak bertentangan satu sama lain, tetapi sebenarnya adalah saling mengisi.</li>
+              <li
+                ><strong>Butir padi berjumlah 17 (tujuh belas)</strong> bersama
+                bunga kapas berjumlah 8 (delapan) di dalam perisai berukuran 4 :
+                5 mengandung pengertian tentang kesetiaan rakyat akan semangat
+                17 Agustus 1945.</li
+              >
+              <li
+                ><strong>Pita yang berbentuk angka 8 (delapan)</strong>, atap
+                pabrik yang berpuncak 4 (empat) dan gelombang laut yang 6 (enam)
+                di atas dan 6 (enam) di bawah menerangkan tentang hari
+                kembalinya Batang menjadi Daerah Kabupaten lagi pada tanggal 8
+                April 1966 setelah 30 tahun bergabung dengan Pekalongan.</li
+              >
+              <li
+                ><strong>Ikan yang berjumlah 2 (dua)</strong> ekor dan terletak
+                berhadapan mengandung arti bahwa di Batang selalu ada dua
+                kekuatan yang saling embat-embatan / musyawarah, nampaknya agak
+                bertentangan satu sama lain, tetapi sebenarnya adalah saling
+                mengisi.</li
+              >
             </ol>
 
             <div class="main-text-header">Pengertian Tentang Warna</div>
             <ol class="lambang-list">
-              <li><strong>MERAH</strong> mengandung pengertian bahaja, berani karena benar dan dinamis. Merah sebagai dasar tulisan Batang menandakan bahwa rakyat di seluruh Kabupaten Batang itu pada dasarnya berbahagia atas kembalinya Batang menjadi Kabupaten lagi.</li>
-              <li><strong>KUNING</strong> pada dasar lambang menunjukkan pribadi yang perirang, hati yang terbuka yang dengan terus terang mengingatkan tegaknya kebenaran dan keadilan.</li>
-              <li><strong>KUNING EMAS</strong> pada bintang melambangkan bahwa pokok tersebut (Tuhan Yang Maha Esa) merupakan zat yang diagungkan oleh seluruh rakyat Kabupaten Batang.</li>
-              <li><strong>HITAM</strong> pada keris berarti keadilan. Bahwa kepemimpinan yang menjadi idaman rakyat yaitu yang dapat membawa rakyat dari setiap penderitaan ke arah kebahagiaan.</li>
-              <li><strong>PUTIH</strong> yang bertontak melambangkan ketulusan hati rakyat yang membina kehidupan daerah.</li>
-              <li><strong>BIRU</strong> pada laut melambangkan keagungan yang dirangkai dengan kemba.</li>
-              <li><strong>COKLAT</strong> pada batik (Sidomukti) sogan, yang menyatakan coklat nya tanah yang basah melambangkan hubungan batin yang mutlak kuat antara rakyat Batang dengan tanah daerahnya. Motif Sidomukti melambangkan agar kembalinya Kabupaten Batang dapat mengangkat taraf hidup rakyat.</li>
-              <li><strong>ABU-ABU</strong> hari merah tentang gedung-gedung dan pendiriran masyarakat Batang.</li>
-              <li><strong>HIJAU</strong> pada gunung dan tangkai kapas melambangkan bahwa pada asasnya daerah Batang itu adalah daerah yang makmur, yang memberi harapan akan masa depan yang cemerlang.</li>
+              <li
+                ><strong>MERAH</strong> mengandung pengertian bahaja, berani
+                karena benar dan dinamis. Merah sebagai dasar tulisan Batang
+                menandakan bahwa rakyat di seluruh Kabupaten Batang itu pada
+                dasarnya berbahagia atas kembalinya Batang menjadi Kabupaten
+                lagi.</li
+              >
+              <li
+                ><strong>KUNING</strong> pada dasar lambang menunjukkan pribadi
+                yang perirang, hati yang terbuka yang dengan terus terang
+                mengingatkan tegaknya kebenaran dan keadilan.</li
+              >
+              <li
+                ><strong>KUNING EMAS</strong> pada bintang melambangkan bahwa
+                pokok tersebut (Tuhan Yang Maha Esa) merupakan zat yang
+                diagungkan oleh seluruh rakyat Kabupaten Batang.</li
+              >
+              <li
+                ><strong>HITAM</strong> pada keris berarti keadilan. Bahwa
+                kepemimpinan yang menjadi idaman rakyat yaitu yang dapat membawa
+                rakyat dari setiap penderitaan ke arah kebahagiaan.</li
+              >
+              <li
+                ><strong>PUTIH</strong> yang bertontak melambangkan ketulusan
+                hati rakyat yang membina kehidupan daerah.</li
+              >
+              <li
+                ><strong>BIRU</strong> pada laut melambangkan keagungan yang
+                dirangkai dengan kemba.</li
+              >
+              <li
+                ><strong>COKLAT</strong> pada batik (Sidomukti) sogan, yang
+                menyatakan coklat nya tanah yang basah melambangkan hubungan
+                batin yang mutlak kuat antara rakyat Batang dengan tanah
+                daerahnya. Motif Sidomukti melambangkan agar kembalinya
+                Kabupaten Batang dapat mengangkat taraf hidup rakyat.</li
+              >
+              <li
+                ><strong>ABU-ABU</strong> hari merah tentang gedung-gedung dan
+                pendiriran masyarakat Batang.</li
+              >
+              <li
+                ><strong>HIJAU</strong> pada gunung dan tangkai kapas
+                melambangkan bahwa pada asasnya daerah Batang itu adalah daerah
+                yang makmur, yang memberi harapan akan masa depan yang
+                cemerlang.</li
+              >
             </ol>
           </div>
         </div>
@@ -321,10 +418,10 @@
         </div>
         <div class="footer-top-container">
           <p class="footer-title">Tautan Utama</p>
-          <a href="../index.html" class="footer-link">Berita Seputar Batang</a>
-          <a href="../index.html" class="footer-link">Pemerintahan Kami</a>
-          <a href="../index.html" class="footer-link">Tentang Batang</a>
-          <a href="../index.html" class="footer-link">Layanan Kami</a>
+          <p class="footer-link">Berita Seputar Batang</p>
+          <p class="footer-link">Pemerintahan Kami</p>
+          <p class="footer-link">Tentang Batang</p>
+          <p class="footer-link">Layanan Kami</p>
         </div>
         <div class="footer-top-container">
           <p class="footer-title">Kontak Kami</p>
